--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.8.3",
     "antd": "^3.12.0",
     "classnames": "^2.3.1",
+    "date-fns": "^2.22.1",
     "node-sass": "^6.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -15,6 +16,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-styleguidist": "^11.1.7",
+    "reset-scss": "^1.0.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
