--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
     "@testing-library/jest-dom": "^5.13.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "antd": "^3.12.0",
+    "antd": "^3.20.7",
     "classnames": "^2.3.1",
     "date-fns": "^2.22.1",
+    "formik": "^1.5.2",
     "node-sass": "^6.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
