--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "@testing-library/user-event": "^12.8.3",
     "antd": "^3.20.7",
     "classnames": "^2.3.1",
-    "date-fns": "^2.22.1",
+    "date-fns": "^1.30.1",
     "formik": "^1.5.2",
+    "lodash": "^4.17.21",
     "node-sass": "^6.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -18,6 +19,7 @@
     "react-scripts": "4.0.3",
     "react-styleguidist": "^11.1.7",
     "reset-scss": "^1.0.0",
+    "tinycolor": "0.0.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
