--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "node-sass": "^6.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.0.3",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-styleguidist": "^11.1.7",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
     "reset-scss": "^1.0.0",
     "tinycolor": "0.0.1",
     "web-vitals": "^1.1.2"
